--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-G
+{
   "name": "bluewhale",
   "version": "0.0.0",
   "description": "Dockerboard Web Client",
@@ -18,8 +18,12 @@ G
   "author": "fundon <cfddream@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.3.12",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
-    "gulp-sass": "ajoslin/gulp-sass#master"
+    "gulp-load-plugins": "^0.8.0",
+    "gulp-sass": "ajoslin/gulp-sass#master",
+    "karma": "^0.12.28",
+    "karma-chrome-launcher": "^0.1.7"
   }
 }
