--- a/package.json
+++ b/package.json
@@ -22,8 +22,21 @@
     "glob": "^4.3.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
+    "gulp-concat": "^2.4.2",
+    "gulp-debug": "^1.0.1",
+    "gulp-filter": "^1.0.2",
+    "gulp-if": "^1.2.5",
+    "gulp-jade": "^0.10.0",
+    "gulp-jscs": "^1.3.1",
+    "gulp-jshint": "^1.9.0",
     "gulp-load-plugins": "^0.8.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-ng-annotate": "^0.4.3",
+    "gulp-ng-html2js": "^0.1.8",
     "gulp-sass": "ajoslin/gulp-sass#master",
+    "gulp-uglify": "^1.0.2",
+    "gulp-watch": "^3.0.0",
+    "jshint-summary": "^0.4.0",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.7"
   }
