--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.3.12",
+    "browser-sync": "^1.8.0",
     "glob": "^4.3.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
