--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-concat": "^2.4.2",
+    "gulp-csso": "^0.2.9",
     "gulp-debug": "^1.0.1",
     "gulp-filter": "^1.0.2",
     "gulp-if": "^1.2.5",
@@ -31,7 +32,6 @@
     "gulp-jscs": "^1.3.1",
     "gulp-jshint": "^1.9.0",
     "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-css": "^0.3.11",
     "gulp-ng-annotate": "^0.4.3",
     "gulp-ng-html2js": "^0.1.8",
     "gulp-sass": "ajoslin/gulp-sass#master",
