--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "browser-sync": "^1.8.0",
+    "del": "^1.1.0",
     "glob": "^4.3.1",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
