--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "gulp-load-plugins": "^0.8.0",
     "gulp-ng-annotate": "^0.4.3",
     "gulp-ng-html2js": "^0.1.8",
+    "gulp-plumber": "^0.6.6",
     "gulp-sass": "ajoslin/gulp-sass#master",
     "gulp-uglify": "^1.0.2",
     "gulp-watch": "^3.0.0",
     "jshint-summary": "^0.4.0",
     "karma": "^0.12.28",
-    "karma-chrome-launcher": "^0.1.7"
+    "karma-chrome-launcher": "^0.1.7",
+    "proxy-middleware": "^0.9.0"
   }
 }
