--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Dockerboard Web Client",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "postinstall": "bower install"
   },
   "repository": "dockerboard/bluewhale",
   "keywords": [
@@ -18,6 +19,7 @@
   "author": "fundon <cfddream@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "bower": "*",
     "browser-sync": "^1.8.0",
     "del": "^1.1.0",
     "glob": "^4.3.1",
