--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-debug": "^1.0.1",
     "gulp-filter": "^1.0.2",
     "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.0.0",
     "gulp-jade": "^0.10.0",
     "gulp-jscs": "^1.3.1",
     "gulp-jshint": "^1.9.0",
