--- a/bower.json
+++ b/bower.json
@@ -22,10 +22,10 @@
     "d3": "3.5.x",
     "lodash": "2.4.x",
     "metrics-graphics": "1.1.x",
-    "angular-material": "0.6.x",
+    "angular-material": "0.7.x",
     "material-design-icons": "1.0.x",
     "angular-pretty-bytes": "1.0.x",
     "angular-loading-bar": "0.6.x",
-    "angular-moment": "~0.8.3"
+    "angular-moment": "0.8.x"
   }
 }
