--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
     "gulp-ng-annotate": "^0.4.3",
     "gulp-ng-html2js": "^0.1.8",
     "gulp-plumber": "^0.6.6",
+    "gulp-rev": "^2.0.1",
     "gulp-sass": "ajoslin/gulp-sass#master",
     "gulp-uglify": "^1.0.2",
+    "gulp-usemin": "^0.3.8",
     "gulp-watch": "^3.0.0",
     "jshint-summary": "^0.4.0",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.7",
-    "proxy-middleware": "^0.9.0"
+    "proxy-middleware": "^0.9.0",
+    "run-sequence": "^1.0.2",
+    "vinyl-paths": "^1.0.0"
   }
 }
