--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "*",
-    "browser-sync": "^1.8.0",
-    "del": "^1.1.0",
-    "glob": "^4.3.1",
-    "gulp": "^3.8.10",
+    "browser-sync": "^1.8.2",
+    "del": "^1.1.1",
+    "glob": "^4.3.2",
+    "gulp": "*",
     "gulp-autoprefixer": "^2.0.0",
-    "gulp-concat": "^2.4.2",
     "gulp-csso": "^0.2.9",
-    "gulp-debug": "^1.0.1",
-    "gulp-filter": "^1.0.2",
+    "gulp-debug": "^2.0.0",
+    "gulp-filter": "^2.0.0",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.0.0",
+    "gulp-imagemin": "^2.1.0",
     "gulp-jade": "^0.10.0",
     "gulp-jscs": "^1.3.1",
     "gulp-jshint": "^1.9.0",
@@ -38,13 +37,13 @@
     "gulp-ng-html2js": "^0.1.8",
     "gulp-plumber": "^0.6.6",
     "gulp-rev": "^2.0.1",
-    "gulp-sass": "ajoslin/gulp-sass#master",
+    "gulp-sass": "^1.2.4",
     "gulp-uglify": "^1.0.2",
     "gulp-usemin": "^0.3.8",
     "gulp-watch": "^3.0.0",
     "jshint-summary": "^0.4.0",
-    "karma": "^0.12.28",
-    "karma-chrome-launcher": "^0.1.7",
+    "karma": "*",
+    "karma-chrome-launcher": "*",
     "node-webkit-builder": "^1.0.4",
     "proxy-middleware": "^0.9.0",
     "run-sequence": "^1.0.2",
