--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gulp-ng-html2js": "^0.1.8",
     "gulp-plumber": "^0.6.6",
     "gulp-rev": "^2.0.1",
-    "gulp-sass": "^1.2.4",
+    "gulp-sass": "ajoslin/gulp-sass#master",
     "gulp-uglify": "^1.0.2",
     "gulp-usemin": "^0.3.8",
     "gulp-watch": "^3.0.0",
