--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "gulp-usemin": "^0.3.8",
     "gulp-watch": "^3.0.0",
     "jshint-summary": "^0.4.0",
-    "karma": "*",
-    "karma-chrome-launcher": "*",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.7",
     "node-webkit-builder": "^1.0.4",
     "proxy-middleware": "^0.9.0",
     "run-sequence": "^1.0.2",
