add prepubish script for npm

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "bluewhale",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Dockerboard Web Client",
   "main": "dist/index.html",
   "scripts": {
-    "test": "make test"
+    "test": "make test",
+    "prepublish": "gulp clean && gulp build && gulp publish"
   },
   "repository": "dockerboard/bluewhale",
   "keywords": [
