--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,11 @@
     "material-design-icons": "1.0.x",
     "angular-pretty-bytes": "1.0.x",
     "angular-loading-bar": "0.6.x",
-    "angular-moment": "0.8.x"
+    "angular-moment": "0.8.x",
+    "angular-translate": "2.5.x",
+    "angular-translate-storage-local": "2.5.x",
+    "angular-translate-loader-static-files": "~2.5.2",
+    "angular-translate-storage-cookie": "~2.5.2",
+    "angular-cookies": "1.3.8"
   }
 }
