--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bluewhale",
-  "version": "0.6.2",
+  "version": "0.6.3",
   "description": "Dockerboard Web Client",
   "main": "dist/index.html",
   "scripts": {
@@ -23,7 +23,7 @@
     "browser-sync": "^1.8.3",
     "del": "^1.1.1",
     "glob": "^4.3.2",
-    "gulp": "*",
+    "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-csso": "^0.2.9",
     "gulp-debug": "^2.0.0",
@@ -34,13 +34,13 @@
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-load-plugins": "^0.8.0",
-    "gulp-ng-annotate": "^0.4.3",
+    "gulp-ng-annotate": "^0.5.0",
     "gulp-ng-html2js": "^0.1.8",
     "gulp-plumber": "^0.6.6",
-    "gulp-rev": "^2.0.1",
+    "gulp-rev": "^3.0.0",
     "gulp-sass": "ajoslin/gulp-sass#master",
     "gulp-uglify": "^1.0.2",
-    "gulp-usemin": "^0.3.8",
+    "gulp-useref": "^1.1.1",
     "gulp-watch": "^3.0.0",
     "jshint-summary": "^0.4.0",
     "karma": "^0.12.31",
