--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-ng-html2js": "^0.1.8",
     "gulp-plumber": "^0.6.6",
     "gulp-rev": "^3.0.0",
+    "gulp-rev-replace": "^0.3.1",
     "gulp-sass": "ajoslin/gulp-sass#master",
     "gulp-uglify": "^1.0.2",
     "gulp-useref": "^1.1.1",
