upgrade bower & npm modules

--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
     "angular-resource": "1.4.x",
     "angular-ui-router": "0.2.x",
     "d3": "3.5.x",
-    "lodash": "2.4.x",
-    "metrics-graphics": "2.0.x",
+    "lodash": "3.x.x",
+    "metrics-graphics": "2.x.x",
     "angular-material": "0.7.x",
     "material-design-icons": "1.0.x",
     "angular-pretty-bytes": "1.0.x",
