--- a/package.json
+++ b/package.json
@@ -16,38 +16,39 @@
     "web",
     "client"
   ],
-  "author": "fundon <cfddream@gmail.com>",
+  "author": "Fangdun Cai <cfddream@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "bower": "*",
-    "browser-sync": "^1.9.1",
+    "browser-sync": "^2.2.1",
     "del": "^1.1.1",
-    "glob": "^4.3.2",
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.0.0",
-    "gulp-csso": "^0.2.9",
+    "glob": "^4.4.0",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-csso": "^1.0.0",
     "gulp-debug": "^2.0.0",
-    "gulp-filter": "^2.0.0",
+    "gulp-filter": "^2.0.2",
     "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.1.0",
-    "gulp-jade": "^0.10.0",
+    "gulp-imagemin": "^2.2.0",
+    "gulp-jade": "^1.0.0",
     "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.0",
+    "gulp-jshint": "^1.9.2",
     "gulp-load-plugins": "^0.8.0",
-    "gulp-ng-annotate": "^0.5.0",
+    "gulp-ng-annotate": "^0.5.2",
     "gulp-ng-html2js": "^0.1.8",
     "gulp-plumber": "^0.6.6",
-    "gulp-rev": "^3.0.0",
-    "gulp-rev-replace": "^0.3.2",
-    "gulp-sass": "ajoslin/gulp-sass#master",
-    "gulp-uglify": "^1.0.2",
+    "gulp-rev": "^3.0.1",
+    "gulp-rev-replace": "^0.3.4",
+    "gulp-sass": "^1.3.3",
+    "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
-    "gulp-watch": "^3.0.0",
+    "gulp-util": "^3.0.3",
+    "gulp-watch": "^4.1.1",
     "jshint-summary": "^0.4.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
-    "node-webkit-builder": "^1.0.4",
-    "proxy-middleware": "^0.9.0",
+    "node-webkit-builder": "^1.0.8",
+    "proxy-middleware": "^0.11.0",
     "run-sequence": "^1.0.2",
     "vinyl-paths": "^1.0.0"
   }
