--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "angular-translate-storage-local": "2.6.x",
     "angular-translate-loader-static-files": "2.6.x",
     "angular-translate-storage-cookie": "2.6.x",
-    "angular-cookies": "1.4.x"
+    "angular-cookies": "1.4.x",
+    "sockjs-client": "~0.3.4"
   }
 }
