--- a/package.json
+++ b/package.json
@@ -20,36 +20,36 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "*",
-    "browser-sync": "^2.2.1",
-    "del": "^1.1.1",
-    "glob": "^4.4.0",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-csso": "^1.0.0",
-    "gulp-debug": "^2.0.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-if": "^1.2.5",
-    "gulp-imagemin": "^2.2.0",
-    "gulp-jade": "^1.0.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.2",
-    "gulp-load-plugins": "^0.8.0",
+    "browser-sync": "^2.x.x",
+    "del": "^1.x.x",
+    "glob": "^4.x",
+    "gulp": "^3.x",
+    "gulp-autoprefixer": "^2.x.x",
+    "gulp-csso": "^1.x.x",
+    "gulp-debug": "^2.x.x",
+    "gulp-filter": "^2.x.x",
+    "gulp-if": "^1.x.x",
+    "gulp-imagemin": "^2.x.x",
+    "gulp-jade": "^1.x.x",
+    "gulp-jscs": "^1.x.x",
+    "gulp-jshint": "^1.x.x",
+    "gulp-load-plugins": "^0.8.x",
     "gulp-ng-annotate": "^0.5.2",
-    "gulp-ng-html2js": "^0.1.8",
-    "gulp-plumber": "^0.6.6",
-    "gulp-rev": "^3.0.1",
-    "gulp-rev-replace": "^0.3.4",
-    "gulp-sass": "^1.3.3",
-    "gulp-uglify": "^1.1.0",
-    "gulp-useref": "^1.1.1",
-    "gulp-util": "^3.0.3",
-    "gulp-watch": "^4.1.1",
+    "gulp-ng-html2js": "^0.2.x",
+    "gulp-plumber": "^1.x.x",
+    "gulp-rev": "^3.x.x",
+    "gulp-rev-replace": "^0.4.x",
+    "gulp-sass": "^1.x.x",
+    "gulp-uglify": "^1.x.x",
+    "gulp-useref": "^1.x.x",
+    "gulp-util": "^3.x.x",
+    "gulp-watch": "^4.x.x",
     "jshint-summary": "^0.4.0",
-    "karma": "^0.12.31",
-    "karma-chrome-launcher": "^0.1.7",
-    "node-webkit-builder": "^1.0.8",
-    "proxy-middleware": "^0.11.0",
-    "run-sequence": "^1.0.2",
-    "vinyl-paths": "^1.0.0"
+    "karma": "^0.12.x",
+    "karma-chrome-launcher": "^0.1.x",
+    "node-webkit-builder": "^1.x.x",
+    "proxy-middleware": "^0.11.x",
+    "run-sequence": "^1.x.x",
+    "vinyl-paths": "^1.x.x"
   }
 }
